# AFTAC_Edge_AI_Capstone

./: .gitignore  .gitmodules  README.md  audio1.py  audio2.py  audio_model_2_ui.py  experiment.txt  maintenance.py  pyproject.toml  requirements.txt  ui.py  vision.py
EfficientNet_Lite2/: .gitignore  README.md  efficientnet_lite2_tf2_onnx_accuracy.py  imagenet_val_manifest.csv  quantize_local_onnx.py  rebuild_imagenet_val_structured.py  requirements.txt
EfficientNet_Lite2/results/: developer_cloud_benchmark_stm32n6570dk.csv
ast/: .gitignore  best_teacher_checkpoint.pt  fine-tuning_teacher_classifier.py  knowledge_distillation.py  optimizing_ast.py  pruning.py  quantize_and_convert_model.py  requirements.txt  utilities.py  validate_student_model.py  validate_uncompressed_student_model.py
ast/colab_training_scripts/: fine-tuning_teacher_classifier.ipynb  knowledge_distillation.ipynb
audio/: .gitignore  benchmark-tflite.py  benchmark-v2.py  benchmark.py  finetune.py  pb2keras-v2.py  pb2keras.py  pytorch2tflite.py  requirements.txt  wavSampleRateUnifier.py
audio/models/: aircraft_mn05_classifier_float16.tflite  aircraft_mn05_classifier_int8.tflite  (+4 more)
sensor_health/: config.py  convert.py  main.py  model_size.py  optimize.py  pyproject.toml  tflite.py  train.py  utils.py
sensor_health/models/: maintenance_model.keras  maintenance_model_int8.tflite
sensor_health/models/maintenance_model_optimized/: fingerprint.pb  keras_metadata.pb  saved_model.pb
sensor_health/models/maintenance_model_optimized/variables/: variables.data-00000-of-00001  variables.index
(+3 files in other folders)
