[project]
name = "aftac"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=1.26.4",
    "pandas>=2.3.3",
    "plotly-express>=0.4.1",
    "scikit-learn>=1.8.0",
    "streamlit>=1.56.0",
    "tensorflow==2.14.1",
    "tensorflow-model-optimization>=0.8.0",
]
